// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VidKing handle imdb movie 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "height": 1080,
      "title": "Fight Club (1999) · Yoru",
    },
    "url": "https://moon.ironwallnet.net/vd/OXN3d0w5Q1pyVGNmVFNmZFpLeERhQTo0VTdCeWtXM2Q2UEJyb2M5bm91UnhB/index-s1080p-v1-a1.m3u8",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "height": 720,
      "title": "Fight Club (1999) · Yoru",
    },
    "url": "https://moon.ironwallnet.net/vd/OXN3d0w5Q1pyVGNmVFNmZFpLeERhQTo0VTdCeWtXM2Q2UEJyb2M5bm91UnhB/index-s720p-v1-a1.m3u8",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "height": 480,
      "title": "Fight Club (1999) · Yoru",
    },
    "url": "https://moon.ironwallnet.net/vd/OXN3d0w5Q1pyVGNmVFNmZFpLeERhQTo0VTdCeWtXM2Q2UEJyb2M5bm91UnhB/index-s480p-v1-a1.m3u8",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "height": 2160,
      "title": "Fight Club (1999) · Yoru",
    },
    "url": "https://moon.ironwallnet.net/vd/OXN3d0w5Q1pyVGNmVFNmZFpLeERhQTo0VTdCeWtXM2Q2UEJyb2M5bm91UnhB/index-s2160p-v1-a1.m3u8",
  },
]
`;

exports[`VidKing handle imdb series 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "height": 1080,
      "title": "Black Mirror S04E02 · Yoru",
    },
    "url": "https://moon.ironwallnet.net/r2/cdn2/T0pBQUZxR1g3WF90R3ZiMnFXSE1GUTpvRVJMblBvaWVYTE94elVtdEJIRDQ3Y0JBUDctWHlGU1dtekFhOUo0TzhsaXg3MDZ0aDNkNTdLd1F3aHd2ODhmeUs2UXotTmw5cVZCblZWZXBtUHdRcDZOdGJVZElUdkZJVXRWMmd5OURqZw/1080p/index.m3u8",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "height": 720,
      "title": "Black Mirror S04E02 · Yoru",
    },
    "url": "https://moon.ironwallnet.net/r2/cdn2/T0pBQUZxR1g3WF90R3ZiMnFXSE1GUTpvRVJMblBvaWVYTE94elVtdEJIRDQ3Y0JBUDctWHlGU1dtekFhOUo0TzhsaXg3MDZ0aDNkNTdLd1F3aHd2ODhmeUs2UXotTmw5cVZCblZWZXBtUHdRcDZOdGJVZElUdkZJVXRWMmd5OURqZw/720p/index.m3u8",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
      ],
      "height": 480,
      "title": "Black Mirror S04E02 · Yoru",
    },
    "url": "https://moon.ironwallnet.net/r2/cdn2/T0pBQUZxR1g3WF90R3ZiMnFXSE1GUTpvRVJMblBvaWVYTE94elVtdEJIRDQ3Y0JBUDctWHlGU1dtekFhOUo0TzhsaXg3MDZ0aDNkNTdLd1F3aHd2ODhmeUs2UXotTmw5cVZCblZWZXBtUHdRcDZOdGJVZElUdkZJVXRWMmd5OURqZw/480p/index.m3u8",
  },
]
`;
